# learnRepo

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html
arma/: CMakeLists.txt  README.md  compile_commands.json
arma/cmake/: CMakeLists.txt
arma/docs/: .gitignore  doxyfile
arma/mlpack/: CMakeLists.txt
arma/mlpack/cmake/: CMakeLists.txt
arma/src/: main.cpp
arma/src/window/: MainWindow.cpp  MainWindow.h
arpie/: arpie_6.cpp  readme.md
assets/: logo.png:Zone.Identifier
blocksuiteVanilla/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
blocksuiteVanilla/src/: main.ts
blocksuiteVanilla/src/editor/: custom-editor-container.ts
blocksuiteVanilla/src/model/: EmbedGithubModel.ts  index.ts
blocksuiteVanilla/src/spec/: EmbedGithubBlockSpec.ts
blocksuiteVanilla/src/view/: EmbedGithubBlock.ts
blog/: index.html
control/cpcon/: CMakeLists.txt  README.md
control/cpcon/cmake/: armadillo_example.cmake  libusb_example.cmake
control/cpcon/src/: main.cpp
control/pycon/: README.md  basicPlot.py  env.yml
datagrid/angular-slickgrid/: README.md  angular.json  package-lock.json  package.json
datagrid/jsslickgrid/: index.html  main.js  package.json
datagrid/tsslickgriduni/: index.html  package.json
db2puml/: .gitignore  LICENSE  Program.cs  README.md  db2puml.csproj  index.html  program.txt  setting.json
db2puml/output/: db2puml.puml
db2puml/src/: program.txt
designPatternCpp/: CMakeLists.txt  README.md
designPatternCpp/src/: Adapter.cpp  Bridge.cpp  Builder.cpp  Factory.cpp
dlib/: CMakeLists.txt
dlib/src/: main.cpp
docker/: Dockerfile
docs/: mkdocs.yml
docs/docs/: index.md
embedded/: .gdb_history  .gdbinit  .gitignore  CMakeLists.txt  README.md  index.html  launch.json  uploadBinary.jlink  usb.md
embedded/callbackLearn/: CMakeLists.txt
embedded/callbackLearn/src/: main.c  main.txt
embedded/cmake/: stm32f765.cmake  stm32fxxx.cmake  toolchain-arm-none-eabi-gcc.cmake
embedded/generator-stm32-libopencm/: eslint.config.js  package-lock.json  package.json  tsconfig.json
embedded/generator-stm32-libopencm/generators/: index.js
embedded/generator-stm32-libopencm/generators/app/: index.js
embedded/generator-stm32-libopencm/src/app/: index.js  index.ts
embedded/generator-stm32-libopencm/src/app/templates/: CMakeLists.txt
embedded/generator-stm32-libopencm/src/new/: index.js  index.ts
embedded/libopencm3Cmake/: CMakeLists.txt
embedded/libopencm3Cmake/cmake/: stm32f407.cmake  stm32fxxx.cmake  toolchain-arm-none-eabi-gcc.cmake
embedded/libopencm3Cmake/src/: stm32f7.ld
embedded/modernCmakeExample/: CMakeLists.txt
embedded/modernCmakeExample/fetch/: CMakeLists.txt
embedded/modernCmakeExample/root-dict/: CMakeLists.txt
embedded/modernCmakeExample/root-simple/: CMakeLists.txt
embedded/modernCmakeExample/root-usefile/: CMakeLists.txt
embedded/modernCmakeExample/simple-project/: CMakeLists.txt
embedded/src/: blink.cpp  embedded_cli.cpp  timer.cpp
embedded/template/_templates/stm32/new/: hello.ejs.t  prompt.js
erpPlanner/: .gitignore  README.md
erpPlanner/api/: .gitignore  Program.cs  appsettings.json  erpPlanner.csproj  serviceCollectionExtension.cs
erpPlanner/spa/: angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
erpPlanner/spa_react/: package.json  vite.config.ts
erpPlanner/sql/: README.md  README_TSQL.md
erpPlanner/testApi/: ComponentTest.cs
faust/: CMakeLists.txt  README.md
faust/src/: main.cpp
faust/src/include/: UIBase.hpp  noise.hpp
glfw/: CMakeLists.txt
glfw/src/: main.cpp
glfw/src/style/: game_engine_style.cpp  game_engine_style.h
julia/: IntroJulia.jl
julia/bishopNeuralNetwork/: ch1_curveFitting.jl
julia/calculusWithJulia/: _quarto.yml  index.qmd  intro.qmd  intro.quarto_ipynb
kotlin/: README.md  kls_database.db  settings.gradle
kotlin/app/: build.gradle
learnQuartz/: Program.cs  QuartzCollectionExtension.cs  ServiceCollectionExtension.cs  learnQuartz.csproj
learnQuartz/Job/: HelloWorld.cs
learnQuartz/Service/: CustomLogger.cs  CustomLoggerExtension.cs  CustomLoggerProvider.cs
markedjs/: package-lock.json  package.json  tsconfig.json
markedjs/src/: index.ts
massTransit/: .gitignore
mlpack/: CMakeLists.txt  README.md  compile_commands.json
mlpack/src/: main.cpp
mobile/: .gitignore  .knownPackages  README.md  kls_database.db  settings.gradle.kts
mobile/.fleet/: receipt.json
mobile/composeApp/: build.gradle.kts
oatpp/: CMakeLists.txt  README.md
oatpp/oat/: CMakeLists.txt
packmac/: README.md
packmac/docs/: README.md
pitonan/: README.md  __main__.py  pyproject.toml
pitonan/src/pitonan/: __init__.py
pyl/: CMakeLists.txt  README.md
pyl/src/: DistrhoPluginInfo.h  PylPlugin.cpp  ResizeHandle.h
pyl/src/ui/: PylUI.cpp
regex/: masterinRegexCh1.txt
root/: CMakeLists.txt  README.md  compile_commands.json
root/src/: guitest.cpp  main.cpp
rxdotnet/: Program.cs  rxdotnet.csproj
rxdotnet/Services/: Main.cs
search/: search_index.json
slickgrid-uni/: .gitignore  index.html  package.json
slickgrid-uni/src/: main.ts  slickgrid-uni.ts  style.scss
spectreSqlServer2PlantUML/: LICENSE  README.md
spectreSqlServer2PlantUML/SqlServerToPlantUML/: Program.cs
texteditor/lexical/: package.json
texteditor/prosemirror/: eslint.config.js  index.html  package.json  tsconfig.json
woah/: CMakeLists.txt  README.md  compile_commands.json  db.sqlite
woah/cmake/: add_oatpp_module.cmake
woah/oat/: CMakeLists.txt
woah/spa/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
woah/spa/src/: App.tsx  Router.tsx
woah/spa/src/component/: TodoListComponent.scss  TodoListComponent.tsx
woah/spa/src/model/: TodoModel.ts
woah/spa/src/page/: WelcomePage.tsx
woah/spa/src/shared/: SharedType.ts  Themes.ts  index.ts
woah/spa/src/store/: StoreProvider.tsx  TodoStore.ts
woah/src/: AppComponent.hpp  SwaggerComponent.hpp
wxwidget/: .clang-format  CMakeLists.txt  compile_commands.json
wxwidget/src/: copy.xpm  main.cpp  sample.xpm
(+293 files in other folders)
