[project]
name = "pitonan"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ahsanu Amala", email = "caasperahsanuamala5@gmail.com"},
]
dependencies = [
    "django>=5.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
